/**
 * Photon Service Proto Definition
 */

syntax = "proto3";

package photon;

// Gateway Service - Bidirectional streaming communication
// Server initiates connection and maintains long-lived stream
// Both sides can send messages independently over this stream
service GatewayService {
  // Bidirectional stream for Server <-> Gateway communication
  rpc Stream (stream ServerMessage) returns (stream GatewayMessage);
}

// Compile Context Request (Gateway → Server)
message CompileContextRequest {
  string request_id = 1;
  string project_id = 2;
  Context context = 3;
}

// Compile Context Response (Server → Gateway)
message CompileContextResponse {
  string request_id = 1;
  bool success = 2;
  optional string error = 3;
  optional Context context = 4;
}

// Run Action Request (Gateway → Server)
message RunActionRequest {
  string request_id = 1;
  string action_name = 2;
  map<string, string> params = 3;
  Context context = 4;
}

// Run Action Response (Server → Gateway)
message RunActionResponse {
  string request_id = 1;
  bool success = 2;
  optional string error = 3;
  optional string result = 4;
}

// Register Request (Server → Gateway)
message RegisterRequest {
  string project_id = 1;
  string project_secret = 2;
  string server_version = 3;
  repeated string capabilities = 4;
}

// Register Response (Gateway → Server)
message RegisterResponse {
  bool success = 1;
  optional string error = 2;
  Config config = 3;
}

message Config {
  int32 heartbeat_interval = 1;
}

// Send Message Request (Server → Gateway)
message SendMessageRequest {
  string user_id = 1;
  Message message = 2;
}

// Send Message Response (Gateway → Server)
message SendMessageResponse {
  bool success = 1;
  optional string error = 2;
  string message_id = 3;
}

message Message {
  string role = 1;
  string content = 2;
  optional string timestamp = 3;
  map<string, string> metadata = 4;
}

// Heartbeat Request (Server → Gateway)
message HeartbeatRequest {
  string project_id = 1;
  string status = 2;
  map<string, string> metrics = 3;
}

// Heartbeat Response (Gateway → Server)
message HeartbeatResponse {
  bool success = 1;
  optional string command = 2;
}

// Unregister Request (Server → Gateway)
message UnregisterRequest {
  string project_id = 1;
  string reason = 2;
}

// Unregister Response (Gateway → Server)
message UnregisterResponse {
  bool success = 1;
  optional string error = 2;
}

// Context Data Structure (Shared)
message Context {
  string scope = 1;
  User user = 2;
  map<string, States> states = 3;
  optional AgentConfig agent_config = 4;
}

message User {
  string id = 1;
  optional string photon = 2;
  optional string email = 3;
}

message States {
  string json_data = 1;
}

message AgentConfig {
  string id = 1;
  repeated string instructions = 2;
}

// ==================== Bidirectional Stream Messages ====================

// ServerMessage - Messages from Server to Gateway
message ServerMessage {
  oneof message {
    RegisterRequest register = 1;
    UnregisterRequest unregister = 2;
    SendMessageRequest send_message = 3;
    HeartbeatRequest heartbeat = 4;
    CompileContextResponse compile_context_response = 5;
    RunActionResponse run_action_response = 6;
  }
}

// GatewayMessage - Messages from Gateway to Server
message GatewayMessage {
  oneof message {
    RegisterResponse register_response = 1;
    UnregisterResponse unregister_response = 2;
    SendMessageResponse send_message_response = 3;
    HeartbeatResponse heartbeat_response = 4;
    CompileContextRequest compile_context_request = 5;
    RunActionRequest run_action_request = 6;
  }
}
